--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "5t3ph",
   "scripts": {
     "build:sass": "sass  --no-source-map src/sass:public/css",
-    "copy:assets": "copyfiles -u 1 ./src/assets/**/* public",
+    "copy:assets": "copyfiles -u 1 \"./src/assets/**/*\" public",
     "copy:js": "copyfiles -u 1 ./src/js/*.js public",
     "copy:html": "copyfiles -u 1 ./src/*.html public",
     "copy": "npm-run-all --parallel copy:*",
