--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build:sass": "sass  --no-source-map src/sass:public/css",
     "copy:assets": "copyfiles -u 1 \"./src/assets/**/*\" public",
-    "copy:js": "copyfiles -u 1 ./src/js/*.js public",
-    "copy:html": "copyfiles -u 1 ./src/*.html public",
+    "copy:js": "copyfiles -u 1 \"./src/js/*.js\" public",
+    "copy:html": "copyfiles -u 1 \"./src/*.html\" public",
     "copy": "npm-run-all --parallel copy:*",
     "watch:assets": "onchange \"src/assets/**/*\" -- npm run copy:html",
     "watch:js": "onchange \"src/js/*.js\" -- npm run copy:html",
