--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "project",
+  "name": "bella-olonjie",
   "version": "0.1.0",
   "description": "SASS compile|autoprefix|minimize and live-reload dev server using Browsersync for static HTML",
   "main": "public/index.html",
-  "author": "5t3ph",
+  "author": "vovka8101",
   "scripts": {
     "build:sass": "sass  --no-source-map src/sass:public/css",
     "copy:assets": "copyfiles -u 1 \"./src/assets/**/*\" public",
