add gh-pages package

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "serve": "browser-sync start --server public --files public",
     "start": "npm-run-all copy --parallel watch serve",
     "build": "npm-run-all copy:html build:*",
+    "deploy": "gh-pages -d public",
     "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
   },
   "dependencies": {
@@ -29,5 +30,8 @@
     "onchange": "^7.1.0",
     "postcss-cli": "^9.1.0",
     "sass": "^1.49.8"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
